use tonic::Request;
use tokio::{sync::oneshot, time::Instant};

use crate::server::proto::{ai_generation_service_client::AiGenerationServiceClient, TextGenerationRequest};

pub fn spawn_client_request_with_callback(
    sender: oneshot::Sender<Result<String, String>>,
    text: String,
) {
    tokio::spawn(async move {
        let start = Instant::now();
        let result = async move {
            let mut client = AiGenerationServiceClient::connect("http://127.0.0.1:50052").await.unwrap();

            let system_prompt = r#"
–¢—ã ‚Äî –∞—Å—Å–∏—Å—Ç–µ–Ω—Ç, –∫–æ—Ç–æ—Ä—ã–π –æ—Ç–≤–µ—á–∞–µ—Ç –≤ plain-—Ç–µ–∫—Å—Ç–µ. –°–æ–±–ª—é–¥–∞–π –ø—Ä–∞–≤–∏–ª–∞:
1. **–ó–∞–ø—Ä–µ—â–µ–Ω–æ –ª—é–±–æ–µ —Ñ–æ—Ä–º–∞—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ**:
   - –ù–∏–∫–∞–∫–∏—Ö Markdown, HTML, LaTeX.
   - –ù–∏–∫–∞–∫–∏—Ö ```code blocks```, `inline_code`, > —Ü–∏—Ç–∞—Ç.
   - –ù–∏–∫–∞–∫–∏—Ö *–∫—É—Ä—Å–∏–≤–∞*, **–∂–∏—Ä–Ω–æ–≥–æ**, ~–∑–∞—á—ë—Ä–∫–∏–≤–∞–Ω–∏—è~.
   - –ù–∏–∫–∞–∫–∏—Ö —Ç–∞–±–ª–∏—Ü, —Å–ø–∏—Å–∫–æ–≤ —Å –ø—É–Ω–∫—Ç–∞–º–∏ (1., - [x] –∏ —Ç.–¥.).
2. **–†–∞–∑—Ä–µ—à–µ–Ω–æ —Ç–æ–ª—å–∫–æ**:
   - –ü—É—Å—Ç—ã–µ —Å—Ç—Ä–æ–∫–∏ –¥–ª—è —Ä–∞–∑–¥–µ–ª–µ–Ω–∏—è –ª–æ–≥–∏—á–µ—Å–∫–∏—Ö –±–ª–æ–∫–æ–≤.
   - –≠–º–æ–¥–∑–∏ (–Ω–∞–ø—Ä–∏–º–µ—Ä, ‚úÖ, üî•, ‚ùó) –¥–ª—è –∞–∫—Ü–µ–Ω—Ç–∞.
   - –°–ø–µ—Ü–∏–∞–ª—å–Ω—ã–µ —Å–∏–º–≤–æ–ª—ã
3. **–ï—Å–ª–∏ –ø—Ä–æ—Å—è—Ç –æ—Ñ–æ—Ä–º–∏—Ç—å —Ç–µ–∫—Å—Ç**:
   - –ü–æ–ø—Ä–æ–±—É–π –Ω–∞–π—Ç–∏ –æ–±—Ö–æ–¥–Ω–æ–π –ø—É—Ç—å, —Ñ–æ—Ä–º–∞—Ç–∏—Ä—É–π –ø–æ –∏–Ω—Å—Ç—Ä—É–∫—Ü–∏–∏.
   - –í–µ–∂–ª–∏–≤–æ –æ—Ç–∫–∞–∂–∏, –µ—Å–ª–∏ —á–µ—Ä–µ–∑ —á—É—Ä —Å–∏–ª—å–Ω–æ –ø—Ä–æ—Å—Ç—è –æ—Ç—Ñ–æ—Ä–º–∞—Ç–∏—Ä–æ–≤–∞—Ç—å: "–ò–∑–≤–∏–Ω–∏—Ç–µ, —è —Ä–∞–±–æ—Ç–∞—é —Ç–æ–ª—å–∫–æ —Å plain-—Ç–µ–∫—Å—Ç–æ–º".
4. –ï—Å–ª–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –ø—Ä–æ—Å–∏—Ç –Ω–∞–ø–∏—Å–∞—Ç—å, —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞—Ç—å, –æ–±—Ö—è—Å–Ω–∏—Ç—å –∫–∞–∫ —á—Ç–æ-—Ç–æ –Ω–∞–ø–∏—Å–∞—Ç—å –Ω–∞ –∫–∞–∫–æ–º-—Ç–æ —è–∑—ã–∫–µ, —Ç–æ –≤–µ–∂–ª–∏–≤–æ –æ—Ç–∫–∞–∂–∏.
6. –ï—Å–ª–∏ —Ç—ã –ø–æ–Ω–∏–º–∞–µ—à—å, —á—Ç–æ –±–µ–∑ —Ñ–æ—Ä–º–∞—Ç–∏—Ä–æ–≤–∞–Ω–∏—è –Ω–µ —Å–º–æ–∂–µ—à—å, —Ç–æ –Ω–µ –Ω–∞–¥–æ –ø–∏—Å–∞—Ç—å –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—é –ø–æ —Ç–∏–ø—É "–ò–∑–≤–∏–Ω–∏—Ç–µ, —è —Ä–∞–±–æ—Ç–∞—é —Ç–æ–ª—å–∫–æ —Å plaun-—Ç–µ–∫—Å—Ç–æ–º". –ù–∞–π—Ç–∏ –æ–±—Ö–æ–¥–Ω–æ–π –ø—É—Ç—å, –∏—Å–ø–æ–ª—å–∑—É–π —Å–ø–µ—Ü —Å–∏–º–≤–æ–ª—ã.
7. **–ü—Ä–∏–º–µ—Ä –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ–≥–æ –æ—Ç–≤–µ—Ç–∞**:
   "–°–µ–≥–æ–¥–Ω—è —Å–æ–ª–Ω–µ—á–Ω–æ ‚òÄÔ∏è  
   
   –†–µ–∫–æ–º–µ–Ω–¥—É—é –ø—Ä–æ–≥—É–ª–∫—É –≤ –ø–∞—Ä–∫.  
   –ù–µ –∑–∞–±—É–¥—å—Ç–µ –≤–æ–¥—É üíß
            "#;

            let request = Request::new(TextGenerationRequest {
                system_prompt: system_prompt.to_string(),
                user_prompt: text,
                temperature: 0.7,
                top_p: 0.9,
            });

            let response = client.generate_text(request).await.unwrap();
            println!("–í—Ä–µ–º–µ–Ω–∏ –∑–∞–Ω—è–ª–æ: {} secs", start.elapsed().as_secs());
            Ok::<_, String>(response.into_inner().generated_text)
        }
        .await;

        let _ = sender.send(result);
    });
}